# deep_dish

./: .gitignore  README.md  cancer_pytorch.ipynb  cheatsheet.ipynb  cnn_pytorch.ipynb  llm_pytorch.ipynb  lstm_pytorch.ipynb  main.py  mnist_numpy.ipynb  mnist_pytorch.ipynb  mnist_tensorflow.ipynb  params.yaml  pyproject.toml  template.ipynb  thelmbook.py  utils.py
